# cpp-utils

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  conanfile.txt  install_and_export.cmake
.cache/clangd/index/: colors.h.C948DA0D434525F4.idx  hourglass.cc.248E74C2F28C3014.idx  hourglass.h.4489BE38F768E269.idx
.cmake/: Config.cmake  cmake_uninstall.cmake
cmake/: cmake_install_config.cmake  config-template.cmake
cmake/install_and_export/: install_and_export.cmake
example/: .gitignore  CMakeLists.txt  main.cc
example/src/: gui.cc  gui.h  main.cc
include/toffee/: colors.h  constexpr.h  flags.h  hourglass.h  info.h  instrumentation.h  lists.h  misc.h
include/utils/: colors.h  constexpr.h  events.h  hourglass.h  imgui.h  info.h  instrumentation.h  lists.h  logger.h  logging.h  misc.h
include/utils/logging/: logger.h  message.h  transport.h
includes/: cli.h  colors.h  misc.h
includes/utils/: argument.h  cli.h  colors.h  command.h  constexpr.h  flag.h  hourglass.h  lists.h  misc.h  token.h
includes/utils/cli/: argument.h  command.h  flag.h
src/: CMakeLists.txt  armstrong.cc  balanced_number.cc  caesar_cipher.cc  counting_frequences.cc  equal_last.cc  increasing_pairs.cc  max_sequence.cc  maximum_sums.cc  mersenne.cc  sequential_search.cc  statistical_measures.cc  sum_fractions.cc  utils.cc  utils.h
src/cli/: argument.h  cli.cc  command.cc  flag.h
src/colors/: colors.cc
src/hourglass/: hourglass.cc  hourglass.h
src/logging/: logger.cc  message.cc  transport.cc
src/misc/: exceptions.h  lists.cc  misc.cc
src/utils/: argument.h  cli.cc  cli.h  colors.cc  colors.h  hourglass.h  option.h
test/: CMakeLists.txt  hourglass.cc  main.cc
tests/: CMakeLists.txt  hourglass.cc
